Fix misalignment of build icons since 2.329 (#193)
* Fix misalignment of build icons since 2.329

* Update stageview_adjunct.less

--- a/ui/src/main/less/mixins.less
+++ b/ui/src/main/less/mixins.less
@@ -32,13 +32,6 @@
   top: 8px;
 }
 
-.inlineBox(@boxSize) {
-  display: inline-block;
-  width: @boxSize;
-  height: @boxSize;
-  background-size: @boxSize @boxSize;
-}
-
 .loading-bg {
   background-image: url('@{root}/plugin/pipeline-stage-view/images/loading.gif');
   background-repeat: no-repeat;
